fixed bg image, stylized add recipes, spent too much time doing with tedium, its friday

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,10 +3,15 @@ $red:#D26F46;
 $blue:#7BB7AD;
 $green:#807E58;
 $brown:#5F5A44;
+
 ///////////////////////////START HOME
-body {
-  margin:0;
-  padding:0;
+
+html, body {
+    height:100%;
+    background-image:url("../images/bg.png");
+    background-size:cover;
+    background-repeat:no-repeat;
+    background-position:fixed;
 }
 
 h2, h3 {
@@ -18,11 +23,21 @@ header {
     text-align:center;
 }
 
+button {
+    transition:all .5 ease;
+    border-radius:5px;
+    color:white;
+    margin:4px;
+    background-color:rgba(255,255,255,.001);
+}
+
+button:hover {
+    background-color:rgba(200,200,200,1)
+}
 
 img.bg {
   min-height: 100%;
   min-width: 100%;
-  width: 100%;
   height: auto;
   position: fixed;
   top: 0;
@@ -30,12 +45,18 @@ img.bg {
   z-index:-1;
   }
 
+
+
  #homeLogo {
      opacity:.8;
-     width:40%;
+     max-width:400px;
      height:auto;
      /* margin-right:auto;
      margin-left:auto; */
+ }
+
+ #homeLogo:hover {
+     opacity:1;
  }
 
 
@@ -43,7 +64,7 @@ img.bg {
      font-size:3em;
      color:white;
      margin: 0px; margin-top: 5px; margin-right:5px;
-     opacity:.8;
+     opacity:.6;
      text-align:right;
      transition:opacity .3s ease-in-out;
  }
@@ -59,14 +80,15 @@ img.bg {
      .panel {
         background-color:rgba(255,255,255,.4);
         .panel-heading {
-            background-color:rgba(255,255,255,.1);
+            background-color:rgba(255,255,255,.7);
 
         }
      }
  }
 
- .homeWrap {
-     margin-top:10%;
+ .homeWrap{
+     font-size:1.2em;
+     margin-top:20%;
  }
 ////////////////////////////////END HOME
 
@@ -75,3 +97,62 @@ img.bg {
   color:white;
   font-family: 'Cutive', serif;
 }
+
+
+////////////////////////////////ADD RECIPE
+
+.addWrap {
+    width:100%;
+    display:inline-block;
+    font-family: 'Lato', sans-serif;
+}
+
+section {
+    display:inline-block;
+    width:48%;
+    background-color:rgba(0,0,0,.4);
+    padding:20px;
+    ul {
+        color:white;
+    }
+    h2 {
+        text-decoration:underline;
+    }
+    h3 {
+        font-weight:lighter;
+    }
+}
+
+aside {
+    display:inline-block;
+    width:48%;
+    background-color:rgba(0,0,0,.4);
+    vertical-align:top;
+    padding:10px;
+    h2 {
+        text-decoration:underline;
+    }
+    h3 {
+        font-weight:lighter;
+    }
+    ul {
+        color:white;
+    }
+    .directions {
+        color:white;
+        font-size:1.2em;
+    }
+}
+
+input, textarea {
+    background-color:rgba(0,0,0,.6);
+    border:none; border-bottom:1px white solid;
+    color:white;
+}
+
+select {
+    background-color:rgba(255,255,255,.001);
+    color:white;
+}
+
+////////////////////////////END ADDRECIPE
